--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 </div>
             </div>
         </section>
-
+<!-- 
         <section id="ui-guide" class="mb-16 scroll-mt-20"> 
             <h2 class="text-3xl font-bold text-gray-800 text-center mb-8">Giải mã Spark UI</h2> 
             <p class="text-center text-gray-600 mb-10 max-w-3xl mx-auto">Spark Web UI (cổng 4040) là công cụ giám sát mạnh mẽ nhất. Dưới đây là cách đọc các thông số trên tab "Streaming". Di chuột hoặc nhấp vào các vùng được đánh dấu để xem giải thích.</p> 
@@ -238,7 +238,7 @@
                     </table>
                 </div>
             </div>
-        </section>
+        </section> -->
     </main>
 
 <!-- Use a template tag to prevent the browser's JS parser from trying to execute the Python code snippets -->
